--- a/real-time-webcam-object-classificator/index.html
+++ b/real-time-webcam-object-classificator/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Real Time Webcam Object Classificator | A Tensorflow.js tutorial by Yasmina Codes</title>
+    <title>Real Time Webcam Object Classificator with Tensorflow.js @yasminacodes</title>
     <meta name="description" content="This tutorial codes a website that accesses to your webcam and classifies the objects you put in front of it in real time." />
 
     <meta charset="utf-8">
@@ -12,7 +12,7 @@
   </head>
   
   <body>
-    <div id="liveView" class="camView">
+    <div id="live-view" class="cam-view">
       <video id="webcam" autoplay></video>
     </div>
     
