--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h2>Begginer</h2>
 
     <a href="real-time-webcam-object-classificator">Real time object classificator with your webcam</a>
+    <a href="real-time-webcam-ar-face-filter">AR filter with face recognition</a>
     
 </body>
 </html>
